--- a/data.qmd
+++ b/data.qmd
@@ -1,5 +1,263 @@
+---
+editor: 
+  markdown: 
+    wrap: 72
+---
+
 # Data
 
-## Description
+## 2.1 Technical description
 
-## Missing value analysis
+### 2.1.1 Data Source and Collection Conditions
+
+1.  Contributing to COVID-19 Deaths, by State and Age, Provisional
+    2020-2023
+
+    The main dataset for this project is collected and managed by the
+    NCHS as part of the National Vital Statistics System (NVSS). The
+    NVSS compiles official death certificate data from various
+    jurisdictions, including the 50 states, the District of Columbia,
+    New York City, and 5 US territories. Death certificates, completed
+    by funeral directors and certifiers, provide both demographic and
+    death-related information, which is then coded using the
+    International Classification of Diseases, Tenth Revision (ICD-10).
+    COVID-19 deaths are specifically coded under ICD-10 code U071.
+    https://data.cdc.gov/NCHS/Conditions-Contributing-to-COVID-19-Deaths-by-Stat/hk9y-quqm
+
+Single-Race Population Estimates 2020-2022 by State and Single-Year Age
+
+To further our analysis, we will also be utilizing US population data
+obtained from CDC Wonder. CDC provides annual estimates of the
+population for each state in the United States, including demographic
+breakdowns by age. The CDC obtains population data by integrating
+various data sources and applying advanced statistical methodologies.
+The primary foundation is decennial census data, which offers a
+comprehensive snapshot of the US population. However, given the ten-year
+interval between censuses, the CDC supplements this with other data
+sources to capture more current population dynamics.
+
+https://wonder.cdc.gov/single-race-population.html
+
+### 2.1.2 Data Format and Dimensions
+
+The main dataset, last updated on September 27, 2023, contains
+approximately 621K rows, 14 columns. Each row details a COVID-19 death,
+categorized by age group, condition, jurisdiction, year and month. The
+dataset includes the following columns: "Date as of", "Start Date", "End
+Date", "Group", "Year", "Month", "State", "Condition Group",
+"Condition", "ICD10_codes", "Age Group", "Covid-19 Deaths", "Number of
+Mentions" and "Flag".
+
+### 2.1.3 Breakdown of columns
+
+1.  Types in each column
+
+    Most columns are categorical data, and the column "COVID.19.Deaths"
+    are numerical data. The first 3 columns "Data.As.Of", "Start.Date"
+    and "End.Date" are timestamps.
+
+2.  Time-related columns
+
+    Column "Year" and "Month" that indicates said time periods of death
+    recorded, thus, the smallest granularity of time interval is month.
+    "Group" column indicates by what time interval the deaths are
+    recorded, whose values can be "by Total", "by Month" and "by Year".
+    If an entry has Group=by Year and Year=2020, then its death count is
+    the sum of all entries' death count where Year=2020 and Group=by
+    Month. Similarly, if an entry has Group=by total, then its death
+    count is the sum over the entire period of the whole dataset.
+
+    The first column "Data As Of" can be dropped as all of them are
+    "9/24/2023" which probably indicates the last date where any records
+    are added to the database, especially since the last date in
+    "End.Date" is "09/23/2023". The other columns "Start.Date" and
+    "End.Date" corresponds to "Group", "Year" and "Month". For example
+    if group=by year, year=2020, then start.date=01/01/2020 and
+    end.Date=12/31/2020. Thus, we decide that "Data As Of", "Start.Date"
+    and "End.Date" aren't that useful as their information is already
+    captured in more precise columns of "Group", "Year" and "Month".
+
+3.  Geography-related columns
+
+    "State" column indicates the geographical states of each record.
+    Some has values "United States" which is already a sum of other
+    states.
+
+4.  Medical conditions columns
+
+    The columns "Condition groups", "Conditions", and "ICD10_codes" are
+    categories and subcategories describing the contributors to death by
+    COVID-19. There's a condition named "Covid-19" which we believe
+    indicates the actual covid-19 deaths as indicated by the name of the
+    data source.
+
+5.  Age-related column
+
+    There is one age-related column called the "Age Group". There's a
+    value "All Ages" which is a sum of the other age groups.
+
+6.  Death-related columns
+
+    There are two death-related columns, "COVID-19 Deaths" and "Number
+    of Mentions". There's little documentation about the difference
+    between them, upon further research, we assume "Number of Mentions"
+    may be the number of times a condition is mentioned on the death
+    certificate, while "COVID-19 Deaths" is the number of times a
+    condition is recorded as a contributor of death by the hospital.
+
+"Flag" column
+
+Has a value if the number of deaths is \<10. For said entries, "COVID-19
+Deaths" and "Number of Mentions" are already suppressed to NAN values to
+be in accordance with NCHS confidentiality standards.
+
+### 2.1.4 Frequency of Updates
+
+Data is created on 5/8/2022. Data is last updated by 9/27/2023, and this
+is the only update to the dataset. The dataset will no longer be
+updated. It's also stated that data for 2022 and 2023 are provisional,
+while "Estimates for 2020 and 2021 are based on final data.".
+
+### 2.1.5 Import
+
+We imported the data by downloading its csv format and importing it to
+R.
+
+### 2.1.6 Issues
+
+1.  Double Counting of Deaths by Conditions
+
+    Death for different conditions can be double counted, for example, a
+    person died from Covid may have both diabetes and obesity at their
+    time of death, as the source notes that "​​To avoid counting the same
+    death multiple times, the numbers for different conditions should
+    not be summated."
+
+2.  Delay or Incomplete Data
+
+    The sources notes "2022 and 2023 data are provisional. Estimates for
+    2020 and 2021 are based on final data." as record reporting for
+    recent years of 2022 and 2923 may be "affected or delayed by
+    COVID-19 related response activities." So we will use 2020 and 2021
+    data for our analysis as these are up-to-date.
+
+3.  Discrepancy Between Covid 19 Deaths vs Mentions for Conditions Other
+    Than Covid-19
+
+    There's another numerical column named "Mentions". For conditions of
+    "Covid-19", "number of deaths" is equal to "number of mentions",
+    which makes sense. Yet for almost all other conditions, their
+    "number of mentions" is almost always larger than "number of
+    deaths". We suspect it's because if a person passed away due to
+    covid-19, but had a history of diabetes, their relatives may still
+    put it as on his death certificate despite the hospital never
+    diagnosed it as a contributor of death. For our research, we will
+    use "Covid 19 Deaths" rather than mentions since if it's produced by
+    the hospital, it may be more authoritative and accurate.
+
+## 2.2 Research plan
+
+1.  Impact of Specific Health Conditions on COVID-19 Mortality Rates
+    Investigate how certain pre-existing conditions (like respiratory
+    diseases, cardiovascular diseases, diabetes, etc.) affect the
+    mortality rates among COVID-19 patients.
+
+    How: Analyze 'COVID-19 Deaths' in relation to 'Conditions' and
+    'Conditions group' to identify which pre-existing conditions have
+    higher mortality rates within covid-19 patients.
+
+2.  Age-Related Vulnerability
+
+    Analyze how age groups differ in their vulnerability to COVID-19,
+    considering the number of deaths and associated health conditions.
+
+    How: Comparative analysis across age groups: calculating average
+    mortality rate per age group or analyzing the frequency and type of
+    comorbidities in each age group
+
+3.  Geographical Variation
+
+    Examine the differences in COVID-19 mortality rates and associated
+    health conditions across different states. This could reveal how
+    geographic factors, healthcare infrastructure, or policies might
+    influence COVID-19 outcomes.
+
+    How: Use the 'State' variable to compare covid-19 impacts across
+    different jurisdictions. We can apply geographic analysis to
+    identify patterns or clusters of high mortality rates.
+
+4.  Trends Over Time
+
+    Assess how the mortality rates and associated conditions have
+    changed over time from 2020 to 2023. This can provide insights into
+    the evolving nature of the pandemic and its impact on public health.
+
+    How: Time series analysis can be used to track the evolution of the
+    pandemic. For example, identifying peaks in mortality rates and
+    changes in prevalence of comorbidity over time.
+
+5.  Comparison Between Provisional and Final Data
+
+    Compare the provisional data for 2022 and 2023 with the final data
+    for 2020 and 2021. This could reveal insights into the progression
+    of the pandemic and the accuracy of provisional data in real-time
+    tracking of the pandemic.
+
+    How: Comparative analysis to assess the differences between
+    2020-2021 and 2022-2023.
+
+## 2.3 Missing value analysis
+
+```{r}
+library(tidyverse)
+library(ggplot2)
+
+covid_data=read.csv("Conditions_Contributing_to_COVID-19_Deaths__by_State_and_Age__Provisional_2020-2023.csv")
+
+# if group is total, fill all year and month by -1
+new_covid=covid_data %>% mutate(Year = ifelse(Group == "By Total", -1, Year))
+new_covid=covid_data %>% mutate(Month = ifelse(Group == "By Total", -1, Month))
+new_covid=new_covid %>% mutate(Month = ifelse(Group == "By Year", -1, Month))
+new_covid=new_covid %>% mutate(Month = ifelse(Group == "By Year", -1, Month))
+
+# count nans
+nan_cols=colMeans(is.na(new_covid))
+nan_cols=data.frame(nan_cols)
+nan_cols <- cbind(newColName = rownames(nan_cols), nan_cols)
+rownames(nan_cols) <- 1:nrow(nan_cols)
+
+#plot nans
+plot <- ggplot(data.frame(nan_cols),
+               aes(x=fct_reorder(newColName,-nan_cols),
+                   y=nan_cols)) +
+  geom_bar(stat="identity") +
+  geom_bar(stat = "identity") +
+  ggtitle("NaN Percentage of All Columns") +
+  theme(axis.text.x = element_text(angle = 90,
+                                   vjust = 0.5,
+                                   hjust=1)) +
+  labs(y= "NaN percentage", 
+       x = "columns")
+plot
+```
+
+As mentioned earlier, \"COVID-19 Deaths\"and \"Number of Mentions\"are
+already suppressed to NAN values if the number of deaths is \<10 and the
+\"Flag\" column is indicated for such entries. Such entries occupy 30%
+of the dataset, which is quite large. We decide to impute the entries
+for \"COVID-19 Deaths\"and \"Number of Mentions\" as the average between
+0 to 10, which is 5.
+
+At first glance, if an entry\'s column \"Group\" has values \"By
+Total\", its \"Year\" and \"Month\" are both missing, because of course
+that row is an aggregation of all past data. Similarly, if an entry\'s
+column \"Group\" has values \"By Year\", its \"Month\" values are
+missing, because that row is an aggregation of all months in that year.
+After replacing the fake missing values in these rows with a dummy value
+\"-1\", it appears that there are no actual nan values in these columns
+anymore. 
+
+Under the column \"Age Group\", there\'s a value \"Not stated\" that
+covers 10% of the entire dataset, which isn\'t much, and can be deleted.
+
+\
