--- a/data.qmd
+++ b/data.qmd
@@ -1,6 +1,6 @@
 ---
-editor: 
-  markdown: 
+editor:
+  markdown:
     wrap: 72
 ---
 
@@ -258,7 +258,7 @@ plot <- ggplot(data.frame(nan_cols),
   theme(axis.text.x = element_text(angle = 90,
                                    vjust = 0.5,
                                    hjust=1)) +
-  labs(y= "NaN percentage", 
+  labs(y= "NaN percentage",
        x = "columns")
 plot
 ```
@@ -292,7 +292,7 @@ population_data <- read_csv("Single-Race Population Estimates 2020-2022 by State
 
 # Modifying 'Single-Year Ages Code' column:
 # If 'Single-Year Ages Code' is "85+", replace it with "85", otherwise keep it as is.
-population_data <- population_data %>% 
+population_data <- population_data %>%
   mutate(`Single-Year Ages Code` = if_else(`Single-Year Ages Code` == "85+", "85", `Single-Year Ages Code`))
 
 population_data
@@ -317,21 +317,21 @@ population_data_formatted <- population_data %>%
       Age >= 85 ~ "85+",
       TRUE ~ NA_character_ # Assign NA to rows not fitting any category
     )
-  ) %>% 
+  ) %>%
   # Rename 'Age' back to 'Single-Year Ages Code'
   rename(`Single-Year Ages Code` = Age)
 
 # Aggregate data across all states for 'United States'
-us_data <- population_data_formatted %>% 
+us_data <- population_data_formatted %>%
   filter(!is.na(`Yearly July 1st Estimates`)) %>%
   group_by(`Yearly July 1st Estimates`, AgeGroup) %>%
-  summarise(TotalPopulation = sum(Population, na.rm = TRUE)) %>% 
+  summarise(TotalPopulation = sum(Population, na.rm = TRUE)) %>%
   ungroup()
 
 # Format US data and add additional columns
-us_data_formatted <- us_data %>% 
+us_data_formatted <- us_data %>%
   # Rename 'TotalPopulation' to 'Population'
-  rename(Population = TotalPopulation) %>% 
+  rename(Population = TotalPopulation) %>%
   # Add and set new columns to specific values or NA
   mutate(Notes = NA,
          States = "United States",
@@ -342,12 +342,12 @@ us_data_formatted <- us_data %>%
          )
 
 # Combine US data with original data
-all_data <- rbind(us_data_formatted, population_data_formatted) %>% 
+all_data <- rbind(us_data_formatted, population_data_formatted) %>%
   filter(is.na(Notes))
 
 # Select and rename relevant columns for the final data
-all_data_population <- all_data %>% 
-  select(States, AgeGroup, Population, `Yearly July 1st Estimates`) %>% 
+all_data_population <- all_data %>%
+  select(States, AgeGroup, Population, `Yearly July 1st Estimates`) %>%
   rename(Age.Group=AgeGroup, State=States, Year=`Yearly July 1st Estimates`)
 ```
 
@@ -359,7 +359,9 @@ covid_yearly_data <- read_csv("year_covid_20_21.csv")
 # and matching rows from 'all_data_population'
 covid_with_population <- left_join(
   covid_yearly_data,
-  all_data_population, 
+  all_data_population,
   by = c("Age.Group", "State", "Year"))
 ```
+
+asdf
 
