Added code for preprocessing covid data to be joined with population

--- a/data.qmd
+++ b/data.qmd
@@ -228,8 +228,8 @@ R.
     are reported within the first 30 days, we can estimate the
     completeness of the provisional data accordingly.
 
-## Missing value analysis
 
+## Data Preprocessing
 ```{r}
 library(tidyverse)
 library(ggplot2)
@@ -238,10 +238,13 @@ covid_data=read.csv("Conditions_Contributing_to_COVID-19_Deaths__by_State_and_Ag
 
 # if group is total, fill all year and month by -1
 new_covid=covid_data %>% mutate(Year = ifelse(Group == "By Total", -1, Year))
-new_covid=covid_data %>% mutate(Month = ifelse(Group == "By Total", -1, Month))
+new_covid=new_covid %>% mutate(Month = ifelse(Group == "By Total", -1, Month))
+new_covid=new_covid %>% mutate(Year = ifelse(Group == "By Year", -1, Month))
 new_covid=new_covid %>% mutate(Month = ifelse(Group == "By Year", -1, Month))
-new_covid=new_covid %>% mutate(Month = ifelse(Group == "By Year", -1, Month))
+```
 
+## Missing value analysis
+```{r}
 # count nans
 nan_cols=colMeans(is.na(new_covid))
 nan_cols=data.frame(nan_cols)
@@ -281,8 +284,24 @@ there are no actual nan values in these columns anymore. 
 Under the column "Age Group", there's a value "Not stated" that covers
 10% of the entire dataset, which isn't much, and can be deleted.
 
+Preprocessing covid dataset to be joined with population dataset.
+```{r}
+# delete useless columns
+df <- subset(new_covid, select = -c(Data.As.Of,Start.Date,End.Date
+))
+df = df |> subset(Group=="By Year")
+
+df = df |> subset(Year %in% c(2020,2021))
+
+row.names(df) <- NULL
+
+# export
+
+write.csv(df, "year_covid_20_21.csv", row.names=FALSE)
+```
 
 Code and Documentation for merging covid conditions dataset with population dataset
+
 ```{r}
 library(dplyr)
 ```
@@ -362,6 +381,3 @@ covid_with_population <- left_join(
   all_data_population,
   by = c("Age.Group", "State", "Year"))
 ```
-
-asdf
-
